feat: user activation with token
